<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_your_art"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ProgressBar
            android:id="@+id/myProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateBehavior="cycle"
            android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fname"
            android:visibility="invisible"
            android:textSize="2sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewMyUploads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toEndOf="@+id/textViewFirstName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.867" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lname"
            android:textSize="2sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/textViewMyUploads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.385"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.867" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:singleLine="true" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="208dp"
                android:layout_height="169dp"
                android:layout_weight="1"
                android:src="@drawable/imgplaceholder" />

            <Button
                android:id="@+id/chooseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_photo" />
        </LinearLayout>

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:text="@string/send"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/openActivityBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/view_all"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/imageSliderActivityBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/open_slide_show"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/takePhotoBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/take_save_photo"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>


