<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_secondary"
    tools:context=".NavigationActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="160dp"
        android:layout_height="158dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/kklogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLoggingIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/logging_in"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <Button
        android:id="@+id/anArtistBtn"
        android:layout_width="214dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:background="@color/yellow"
        android:padding="1dp"
        android:text="@string/an_artist"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoggingIn" />

    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/Or"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <Button
        android:id="@+id/aClientBtn"
        android:layout_width="214dp"
        android:layout_height="42dp"
        android:layout_marginTop="188dp"
        android:background="@color/yellow"
        android:padding="1dp"
        android:text="@string/a_client"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoggingIn" />

</androidx.constraintlayout.widget.ConstraintLayout>